# mcparena

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/pilot/: launch_memo.md  pre_registration.md
examples/: tasks_time_mcp.json  tasks_unit_converter.json  tasks_wikipedia.json  tasks_wikipedia_mcpbench.json  tasks_wikipedia_tiny.json
examples/verifiable/: unit_converter_tasks.json
scripts/: align_calibrate.py  check_docs_cleanup.py  debug_axis_ii.py  debug_one_baseline.py  fair_retest.py  phase0_run.py  phase0_spotcheck.py  phase0_unit_converter.py  run_phase1_gepa.py  run_phase2.py  validate_cross_model_judge.py  validate_harness_fix.py  validate_judge_temperature.py  validate_time_mcp.py  validate_time_mcp_gepa_runs.py  validate_wikipedia.py  verifiable_run.py
src/mcparena/: __init__.py  cli.py  optimize.py
src/mcparena/pilot/: __init__.py  benchmark.py  costs.py  judge.py  lm.py  pilot.py  tasks.py  tools.py
src/mcparena/verifiable/: __init__.py  align.py  tasks.py
tests/: test_align.py  test_benchmark_loader.py  test_costs.py  test_imports.py  test_judge.py  test_judge_metrics.py  test_lm.py  test_optimize.py  test_pilot_helpers.py  test_pilot_servers.py  test_task_schema.py  test_tools.py  test_verifiable.py
tests/__snapshots__/: test_judge.ambr
tests/judge_fixtures/: README.md  transcripts.jsonl
